k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
spec:
  selector:
    matchLabels:
      app: go-rest-mux-app
      version: v1
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: go-rest-mux-app
        version: v1
    spec:
      containers:
      - name: goapp
        image: registry.gitlab.com/mayankkapoor/go-rest-mux-app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
spec:
  selector:
    app: go-rest-mux-app
    version: v1
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8000
