k8s-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: goapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Replace with your fully qualified domain name, e.g. goapp.example.com, without quotes
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goapp
spec:
  hosts:
  - "*" # Replace with your fully qualified domain name, e.g. goapp.example.com, without quotes
  gateways:
  - goapp-gateway
  http:
  - match:
    - uri:
        prefix: /posts
    route:
    - destination:
        host: goapp-service
        port:
          number: 80
